fixed input bar on mobile

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -16,7 +16,7 @@
 
 #MIXINS
 
- */
+*/
 .background-size(@args){
   -webkit-background-size: @args;
   -moz-background-size: @args;
@@ -34,7 +34,7 @@
 
 ##STYLES
 
- */
+*/
 body{
   color: @fontGrey;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -60,8 +60,11 @@ section{
     position: relative;
     z-index: 100;
 
+    //everything except mobile
     @media only screen
-      and (min-width : 1224px) {
+    and (min-device-width : 768px)
+    and (max-device-width : 1024px),
+    (min-width : 1224px) {
       padding: 25px;
     }
   }
@@ -84,6 +87,28 @@ section{
 
 }
 
+
+.email-signup form{
+  margin: 0 auto;
+
+  input[type=email]{
+    padding: 10px;
+
+    //mobile
+    @media only screen
+    and (min-width : 320px) {
+      margin: 0 auto;
+    }
+
+  }
+
+
+
+  button:hover{
+    background: @logoBlue;
+  }
+}
+
 .info{
   margin: 0 auto;
 }
@@ -96,7 +121,7 @@ section{
 
 .submit-button{
   color: white;
-  .border-radius(4px);
+  .rounded(4px);
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   background: @logoBlue;
 }
